# lytro-py

./: .gitignore  README.md  calibration.json  main.py  pyproject.toml
lib/: calibration_data.py  captured_picture.py  lightfield_image.py  lightfield_pipeline.py  lyli_metadata.py  lytro_device.py  lytro_io.py  raw_image.py  usb_mass_storage.py
lib/calibration/: __init__.py  calibrator.py  exception.py  fftpreprocessor.py  gridmapper.py  gridmath.py  lensdetector.py  linegrid.py  mathutil.py  pipeline.py  pointgrid.py  preprocessor.py  subgrid.py
