[project]
name = "lytro-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pyusb>=1.3.1",
    "typed-argument-parser>=1.11.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
