[project]
name = "lytro-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pyfatfs>=1.1.0",
    "pyusb>=1.3.1",
    "tqdm>=4.67.3",
    "typed-argument-parser>=1.11.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
